fix sidebar overflow

--- a/style.css
+++ b/style.css
@@ -82,9 +82,6 @@ aside {
   transition: width 0.3s, min-width 0.3s, padding 0.3s, background 0.3s;
   position: relative;
   overflow-y: auto;
-  backdrop-filter: blur(2px);
-  max-width: 100vw;
-  box-sizing: border-box;
   overflow-x: hidden;
   height: 100%;
   flex-shrink: 0;
